hphp/test/slow/parser/unset_class_constant_on_instance.php.expectf
Fatal error: Cannot mutate a class constant in %s/unset_class_constant_on_instance.php on line 11
